Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56459

Qt 5.8 MinGW developer build broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.8.0 Beta
    • 5.8.0 Alpha
    • GUI: Painting
    • None
    • 17ac3b2c146d1f48b88dbdc09927ddc3dd3aef81 (qtbase/5.8, 11.10.2016)

      In file included from ..\..\include/QtGui/qcolor.h:1:0,
                       from ..\..\include/QtGui/../../src/gui/image/qpixmap.h:45,
                       from ..\..\include/QtGui/qpixmap.h:1,
                       from ..\..\include\QtGui/../../src/gui/image/qbitmap.h:44,
                       from ..\..\include\QtGui/qbitmap.h:1,
                       from kernel\qt_widgets_pch.h:69:
      ..\..\include/QtGui/../../src/gui/painting/qcolor.h:280:8: error: 'QColor::QColor(QLatin1String)' redeclared without dllimport attribute after being referenced with dll linkage [-Werror]
       inline QColor::QColor(QLatin1String aname)
              ^
      cc1plus.exe: all warnings being treated as errors
      Makefile.Debug:43380: recipe for target '.pch/debug/qt_widgets_pch.h.gch/c++' failed
      

        For Gerrit Dashboard: QTBUG-56459
        # Subject Branch Project Status CR V

            mmutz Marc Mutz
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes